--- a/lib/src/stylesheets/tek-mixin.less/03.style.less
+++ b/lib/src/stylesheets/tek-mixin.less/03.style.less
@@ -259,3 +259,11 @@
   position: absolute;
   bottom: @px;
 }
+
+.transition(@property) {
+  -webkit-transition: @property;
+  -moz-transition: @property;
+  -ms-transition: @property;
+  -o-transition: @property;
+  transition: @property;
+}
