--- a/lib/src/stylesheets/tek-style-flat.less/01.flat.css
+++ b/lib/src/stylesheets/tek-style-flat.less/01.flat.css
@@ -106,6 +106,13 @@
 */
 @font-face {
   font-family: "Ionicons";
+  src: url("../fonts/ionicons.eot?v=1.3.6");
+  src: url("../fonts/ionicons.eot?v=1.3.6#iefix") format("embedded-opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Ionicons";
   src: url("../fonts/ionicons.eot?v=1.3.6#iefix") format("embedded-opentype"), url("../fonts/ionicons.woff?v=1.3.6") format("woff");
   font-weight: normal;
   font-style: normal;
@@ -253,6 +260,80 @@ body {
   background-color: #fefefe;
   color: #555555;
   padding-top: 8px;
+}
+body [type="checkbox"],
+body [type="radio"] {
+  display: none;
+}
+body [type="checkbox"] + label,
+body [type="radio"] + label {
+  position: relative;
+  padding-left: 20px;
+}
+body [type="checkbox"] + label:before,
+body [type="radio"] + label:before {
+  width: 10px;
+  height: 10px;
+  background-color: #f1f1f1;
+  display: inline-block;
+  content: '';
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4) inset;
+  -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4) inset;
+  -o-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4) inset;
+  -ms-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4) inset;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4) inset;
+  bottom: 4.5px;
+  left: 7px;
+  position: absolute;
+}
+body [type="checkbox"] + label:after,
+body [type="radio"] + label:after {
+  width: 6px;
+  height: 6px;
+  background-color: #555555;
+  display: inline-block;
+  content: '';
+  bottom: 6.5px;
+  left: 9px;
+  position: absolute;
+  display: none;
+}
+body [type="checkbox"]:checked + label:after,
+body [type="radio"]:checked + label:after {
+  display: inline-block;
+}
+body [type="radio"] + label:before,
+body [type="radio"] + label:after {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -o-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+}
+body [type="checkbox"] + label:before {
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -o-border-radius: 2px;
+  -ms-border-radius: 2px;
+  border-radius: 2px;
+}
+body [type="checkbox"] + label:after {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  width: 2px;
+  height: 5px;
+  left: 10px;
+  border: 2px solid #555555;
+  border-top: none;
+  border-left: none;
+  background-color: transparent;
+}
+body [type="radio"] label:before,
+body [type="checkbox"] label:before {
+  border: 1px solid #cbcbcb;
 }
 .full-width {
   width: 100%;
@@ -531,4 +612,89 @@ section {
   content: "\f102";
   vertical-align: bottom;
   margin: 0 2px;
+}
+/******************
+ err
+*******************/
+.err-input[type='text'],
+.err-input[type='url'],
+.err-input[type='search'],
+.err-input[type='tel'],
+.err-input[type='password'] {
+  border: 1px solid #eb7171;
+}
+.err-msg {
+  color: #eb7171;
+}
+/******************
+ alert
+*******************/
+.err-alert {
+  padding: 5px 10px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #eb7171;
+  color: #e54444;
+  margin: 4px 8px;
+  background-color: #ffffff;
+}
+.err-alert .close-btn {
+  color: #e54444;
+  opacity: .25;
+  position: relative;
+  padding: 0 2px;
+  font-weight: bolder;
+}
+.err-alert .close-btn:hover {
+  text-decoration: none;
+  opacity: 1;
+}
+.warn-alert {
+  padding: 5px 10px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ebd982;
+  color: #e4cc56;
+  margin: 4px 8px;
+  background-color: #ffffff;
+}
+.warn-alert .close-btn {
+  color: #e4cc56;
+  opacity: .25;
+  position: relative;
+  padding: 0 2px;
+  font-weight: bolder;
+}
+.warn-alert .close-btn:hover {
+  text-decoration: none;
+  opacity: 1;
+}
+.info-alert {
+  padding: 5px 10px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #a37aeb;
+  color: #844ee4;
+  margin: 4px 8px;
+  background-color: #ffffff;
+}
+.info-alert .close-btn {
+  color: #844ee4;
+  opacity: .25;
+  position: relative;
+  padding: 0 2px;
+  font-weight: bolder;
+}
+.info-alert .close-btn:hover {
+  text-decoration: none;
+  opacity: 1;
 }
