--- a/lib/src/stylesheets/tek-style.less/01.style.less
+++ b/lib/src/stylesheets/tek-style.less/01.style.less
@@ -1,4 +1,26 @@
-@import "../../../../dist/stylesheets/tek-mixin";
+//<h1>tek-style.less-0.2.48</h1>
+@import "tek-mixin";
+
+@font-face {
+  font-family: "Ionicons";
+  src: url("../fonts/ionicons.eot?v=1.3.6#iefix") format("embedded-opentype"), url("../fonts/ionicons.woff?v=1.3.6") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.ion {
+  display: inline-block;
+  font-family: "Ionicons";
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  text-rendering: auto;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 /*******************
  * prefix
@@ -10,6 +32,7 @@
 [class^="block-"] {
   display: block;
 }
+
 [class^="wide-"] {
   width: 100%;
   .box-sizing(border-box);
@@ -40,6 +63,7 @@
 .grabbable {
   .grabbable();
 }
+
 /*******************
  *  positioning
  *******************/
@@ -47,20 +71,21 @@
   position: relative;
 }
 
+@stick:0;
 .stick-left {
-  .stick-left(5px);
+  .stick-left(@stick);
 }
 
 .stick-right {
-  .stick-right(5px);
+  .stick-right(@stick);
 }
 
 .stick-top {
-  .stick-top(5px);
+  .stick-top(@stick);
 }
 
 .stick-bottom {
-  .stick-bottom(5px);
+  .stick-bottom(@stick);
 }
 
 .text-right {
@@ -96,4 +121,15 @@
 *******************/
 .hidden {
   display: none;
+}
+
+.hoverable{
+  .hoverable-child{
+    opacity: .5;
+  }
+  &:hover{
+    .hoverable-child{
+      opacity: 1;
+    }
+  }
 }
