--- a/lib/src/stylesheets/tek-style-flat.less/01.flat.less
+++ b/lib/src/stylesheets/tek-style-flat.less/01.flat.less
@@ -3,7 +3,7 @@
 
 @back: #FEFEFE;
 @color: #555;
-@accent: #28407c;
+@link: #294c95;
 @border: lighten(@color, 20);
 @err: #EB7171;
 @info: #a37aeb;
@@ -61,7 +61,7 @@ nav {
 }
 
 a {
-  .a(@accent);
+  .a(@link);
 }
 
 article {
@@ -176,7 +176,7 @@ section {
   &:before {
     .ion;
     content: @content;
-    vertical-align: bottom;
+    vertical-align: baseline;
     margin: 0 2px;
   }
 }
@@ -219,6 +219,10 @@ section {
 .refresh-btn{
   .ion-btn("\f21c");
 }
+.close-btn{
+  .ion-btn("\f129");
+}
+
 /******************
  err
 *******************/
@@ -229,6 +233,7 @@ section {
   &[type='tel'],
   &[type='password'] {
     border: 1px solid @err;
+    outline-color: @err;
   }
 }
 
@@ -240,7 +245,7 @@ section {
  alert
 *******************/
 .alert(@color) {
-  padding: 5px 10px;
+  padding: 4px 8px;
   .border-radius(4px);
   border: 1px solid @color;
   color: darken(@color, 10);
@@ -250,7 +255,7 @@ section {
     color:darken(@color, 10);
     opacity: .25;
     position: relative;
-    padding: 0 2px;
+    padding: 1px 0;
     font-weight: bolder;
     &:hover{
       text-decoration: none;
