--- a/lib/src/stylesheets/tek-style.less/01.style.less
+++ b/lib/src/stylesheets/tek-style.less/01.style.less
@@ -133,3 +133,21 @@
     }
   }
 }
+
+
+.dialog{
+  .cover();
+  .box-sizing(border-box);
+  background-color: fadeout(gray, 50);
+}
+.dialog-inner{
+  margin: 10% auto;
+  padding: 10px;
+  display: inline-block;
+  background-color: white;
+  position: relative;
+  .close-btn{
+    top:4px;
+    right:8px;
+  }
+}
