--- a/lib/src/stylesheets/tek.view.less/01.base.less
+++ b/lib/src/stylesheets/tek.view.less/01.base.less
@@ -4,6 +4,8 @@
 @highlight: lighten(@blue, 5);
 @color: #666666;
 @err: #FE5454;
+
+.tk-dialog,
 .tk-confirm-dialog {
   .black-cover();
   color: @color;
@@ -18,9 +20,11 @@
     }
   }
 }
-.tk-loading{
+
+.tk-loading {
   opacity: .5;
 }
+
 .tk-dialog-inner() {
   position: relative;
   max-width: 400px;
@@ -31,7 +35,7 @@
   .box-shadow(4px 4px 8px, 0.5);
   padding: 15px 20px;
 }
-
+.tk-dialog-inner,
 .tk-confirm-dialog-inner {
   .tk-dialog-inner();
 }
@@ -50,7 +54,7 @@
     background-image: none;
   }
 }
-
+.tk-dialog-close-btn,
 .tk-confirm-dialog-close-btn {
   .remove-btn();
 }
@@ -260,11 +264,11 @@
   overflow-x: hidden;
   display: inline-block;
   white-space: nowrap;
-  .tk-slide-menu-content{
+  .tk-slide-menu-content {
     display: inline-block;
     white-space: nowrap;
   }
-  .tk-slide-menu-inner{
+  .tk-slide-menu-inner {
     position: relative;
   }
   .tk-slide-menu-open-btn {
@@ -283,6 +287,6 @@
   }
 }
 
-.tk-pre{
+.tk-pre {
   white-space: pre;
 }
