--- a/lib/src/stylesheets/tek-mixin.less/04.component.less
+++ b/lib/src/stylesheets/tek-mixin.less/04.component.less
@@ -101,6 +101,7 @@
   position: absolute;
   right: 5px;
   text-decoration: none;
+  line-height: 1em;
   &:hover {
     opacity: 1;
     text-decoration: none;
