--- a/lib/src/stylesheets/tek-style-flat.less/01.flat.less
+++ b/lib/src/stylesheets/tek-style-flat.less/01.flat.less
@@ -219,6 +219,18 @@ table {
   .ion-btn("\f129");
   color:darken(@back, 30);
 }
+.mypage-btn{
+  .ion-btn("\f127");
+}
+.star-btn{
+  .ion-btn("\f24e");
+}
+.admin-btn{
+  .ion-btn("\f2ad");
+}
+.setting-btn{
+  .ion-btn("\f13d");
+}
 
 /******************
  err
