--- a/lib/src/stylesheets/tek.view.less/01.base.less
+++ b/lib/src/stylesheets/tek.view.less/01.base.less
@@ -142,6 +142,9 @@
   position: fixed;
   top: 0;
 }
+.tk-spy-hidden{
+  display: none !important;
+}
 
 .tk-err-balloon {
   @back: lighten(@err, 22);
