--- a/lib/src/stylesheets/tek-style.less/01.style.less
+++ b/lib/src/stylesheets/tek-style.less/01.style.less
@@ -25,15 +25,15 @@
 /*******************
  * prefix
  *******************/
-[class^="inline-"] {
+[class^="inline-"],[class*=" inline-"] {
   display: inline-block;
 }
 
-[class^="block-"] {
+[class^="block-"],[class*=" block-"] {
   display: block;
 }
 
-[class^="wide-"] {
+[class^="wide-"],[class*=" wide-"] {
   width: 100%;
   .box-sizing(border-box);
 }
