--- a/test/html-tests/stylesheets/test-tek.view.less
+++ b/test/html-tests/stylesheets/test-tek.view.less
@@ -1,1 +1,1 @@
-@import "../../../lib/src/stylesheets/tek.view.less/01.base.less";
+@import "../../../lib/src/stylesheets/tek.view.less/01.tek.view.less";
