--- a/lib/src/stylesheets/tek-mixin.less/03.style.less
+++ b/lib/src/stylesheets/tek-mixin.less/03.style.less
@@ -158,6 +158,15 @@
 }
 
 //noinspection CssUnknownProperty
+.transform-origin(@origin;){
+  transform-origin:@origin;
+  -ms-transform-origin:@origin;
+  -webkit-transform-origin:@origin;
+  -moz-transform-origin:@origin;
+}
+
+
+//noinspection CssUnknownProperty
 .scale(@scale) {
   -moz-transform: scale(@scale);
   -webkit-transform: scale(@scale);
